--- a/Portfolio.css
+++ b/Portfolio.css
@@ -149,11 +149,11 @@ p{
 }
 
 .CaseStudyBlock{
-  width: 100%;
-  max-width: 373px;
+  width: 300px;
+  /*max-width: 373px;*/
   margin-top: 8px;
   margin-bottom: 20px;
-  height: 420px;
+  height: 300px;
   background-repeat: no-repeat;
   background-position: top left;
   background-size: 95%;
