--- a/Portfolio.css
+++ b/Portfolio.css
@@ -173,7 +173,7 @@ p{
   padding-top: 4px;
   padding-bottom: 4px;
   top: 30%;
-  max-width: 75%;
+  max-width: 215px;
   background-color: #fdfcf8;
 
 
