Major Changes... For got to Commit last night RIP

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -201,5 +201,5 @@ a{
   color: #3c2826;
   -webkit-text-decoration-color: #F1D7A2; /* Safari */
    text-decoration-color: #F1D7A2;
-   font-weight: bold;
+   font-weight: 700;
 }
