--- a/CaseStudy.css
+++ b/CaseStudy.css
@@ -22,11 +22,13 @@ body {
 }
 
 
+
 .appicon{
   background-repeat: no-repeat;
   background-position: top left;
   background-size: 90%;
-  margin-left: 15px;
+  margin-left: auto;
+  margin-right: auto;
   width: 115px;
   height: 115px;
   position: relative;
@@ -80,15 +82,28 @@ max-width: 400px;
 }
 
 
-.contentblock{
+.topcontentblock{
   width: 90%;
   max-width: 500px;
 
-  margin-left: 15px;
-  margin-right: 10%;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: -100px;
   margin-bottom: 26px;
+  padding-top: 1px;
+  padding-bottom: 1px;
 
+}
+
+.contentblock{
+  width: 90%;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 75px;
+  margin-top: 75px;
+  padding-top: 1px;
+  padding-bottom: 1px;
 
 }
 
@@ -143,6 +158,7 @@ h3{
   line-height: 110%;
   margin-top: 12px;
   margin-bottom: 4px;
+  opacity: .75;
 
 }
 
@@ -158,30 +174,6 @@ p{
 
 
 
-
-
-.CaseStudyTextBlock{
-  font-family: 'IBM Plex Sans', sans-serif;
-/*font-style: italic;*/
-  line-height: 90%;
-  position: relative;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  top: 30%;
-  max-width: 215px;
-  background-color: #fdfcf8;
-
-
-}
-
-.SocialMediaIcon{
-
-  width: 40px;
-  height: 40px;
-  margin: 12px;
-  margin-left: 0px;
-}
-
 h4{
   font-family: 'Space Mono', sans-serif;
   font-weight: 400;
@@ -192,9 +184,70 @@ h4{
   margin-bottom: 8px;
 }
 
+h5{
+  font-family: '  Open Sans', sans-serif;
+  font-weight: 400;
+  font-size: .77em;
+  color: #337dab;
+  line-height: 130%;
+  margin-top: 0px;
+  margin-bottom: 8px;
+}
+
 a{
-  color: #3c2826;
+  color: #005C96;
   -webkit-text-decoration-color: #F1D7A2; /* Safari */
    text-decoration-color: #F1D7A2;
-   font-weight: bold;
+   font-weight: 700;
 }
+
+
+.PhotoFlex{
+
+display: flex;
+flex-wrap: wrap;
+float: left;
+margin-left: auto;
+margin-right: auto;
+}
+
+.PhotoBlock{
+  margin-top: 8px;
+  width: 230px;
+  margin-right: 10px;
+  background-position: left;
+  background-size: contain;
+  background-repeat: no-repeat;
+  }
+
+  img{
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto 0 auto;
+  }
+
+
+
+  .StepActive{
+  background-color: #0072CF;
+  height: 10px;
+  }
+
+  .StepInactive{
+  background-color: #CCCCCC;
+  opacity: .5;
+  height: 10px;
+  }
+
+
+
+  .stepper{
+  height: 3px;
+  width: 100%;
+  max-width: 500px;
+  min-width: 300px;
+  display: grid;
+  grid-template-columns: 35% auto ;
+  grid-gap: 3px;
+
+  }
