--- a/CaseStudy.css
+++ b/CaseStudy.css
@@ -67,6 +67,25 @@ content{
 
 }
 
+
+
+@media only screen and (max-width: 420px) {
+    /* For large phones: */
+
+    .PhotoFlex{
+      text-align: center;
+    }
+
+    ul{
+      text-align: left;
+    }
+
+
+
+
+}
+
+
 .CaseFlex{
 
 display: flex;
@@ -123,7 +142,11 @@ max-width: 400px;
 }
 
 
-
+.pattern{
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23337dab' fill-opacity='0.25' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+  background-position: left;
+}
 
 .caption{
   margin-left: auto;
@@ -209,21 +232,43 @@ a{
    font-weight: 700;
 }
 
+ul{
+  text-align: left;
+
+}
+
+.ListFlex{
+
+display: flex;
+flex-wrap: wrap;
+float: left;
+margin: 0 auto 0 auto;
+
+}
+
+.ListBlock{
+  margin-top: 8px;
+  width: 230px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  }
 
 .PhotoFlex{
 
 display: flex;
 flex-wrap: wrap;
 float: left;
-margin-left: auto;
-margin-right: auto;
+margin: 0 auto 20px auto;
+
+
 }
 
 .PhotoBlock{
   margin-top: 8px;
   width: 230px;
-  margin-right: 10px;
-  background-position: left;
+  margin: 0 auto 0 auto;
+  background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
   }
