--- a/CaseStudy.css
+++ b/CaseStudy.css
@@ -275,23 +275,23 @@ margin: 0 auto 20px auto;
 
   img{
     width: 100%;
-    max-width: 800px;
+    max-width: 700px;
     margin: 0 auto 0 auto;
   }
 
   .video-responsive{
-      overflow:hidden;
-      padding-bottom:56.25%;
-      position:relative;
-      height:0;
-      max-width: 800px;
+      overflow: hidden;
+      padding-bottom: 400px;
+      position: relative;
+      height: 0;
+      max-width: 700px;
       max-height: 400px;
       margin: 0 auto 0 auto;
   }
   .video-responsive iframe{
       left:0;
       top:0;
-      max-width: 800px;
+      max-width: 700px;
       max-height: 400px;
       height:100%;
       width:100%;
