--- a/Portfolio.css
+++ b/Portfolio.css
@@ -25,10 +25,8 @@ body {
 
 
 
-
-
 content{
-  height: content;
+
   width: 100%;
   background-color: #FFFFFF;
   display: flex;
@@ -50,6 +48,24 @@ content{
     .CaseStudyBlock{
       width: 279px;
     }
+
+
+    body{
+      background-image: url('none');
+    }
+
+}
+
+
+@media only screen and (min-width: 500px) {
+    /* For largescreens: */
+    content {
+        position: relative;
+        top: 2%;
+    }
+
+
+
 
 
     body{
@@ -121,7 +137,7 @@ h2{
   font-family: 'IBM Plex Sans', sans-serif;
 /*font-style: italic;*/
   font-weight: 700;
-  font-size: 1.75em;
+  font-size: 1.65em;
   line-height: 90%;
   margin-top: 12px;
   margin-bottom: 4px;
@@ -172,7 +188,7 @@ p{
   position: relative;
   padding-top: 4px;
   padding-bottom: 4px;
-  top: 30%;
+  top: 40%;
   max-width: 215px;
   background-color: #fdfcf8;
 
